objects/sumoapp__License__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__MemberType__c</fullName>
        <label>Member Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Modules__c</fullName>
        <label>License Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ONLINE_SCHEDULER</fullName>
                    <label>Online Scheduler User License</label>
                </value>
                <value>
                    <fullName>INSTANT_BOOKER</fullName>
                    <label>Instant Booker (Schedule Now) User License</label>
                </value>
                <value>
                    <fullName>EMAIL_INVITES</fullName>
                    <label>Email Invites User License</label>
                </value>
                <value>
                    <fullName>APPOINTMENT_LINKS</fullName>
                    <label>Appt Links User License</label>
                </value>
                <value>
                    <fullName>EVENT_HOST_LITE</fullName>
                    <label>Event Host Lite</label>
                </value>
                <value>
                    <fullName>FIELD_SALES</fullName>
                    <label>Field Sales</label>
                </value>
                <value>
                    <fullName>APPOINTMENT_GHOST</fullName>
                    <label>Appointment Ghost User License</label>
                </value>
                <value>
                    <fullName>EVENT_GHOST</fullName>
                    <label>Event Ghost User License</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APPOINTMENT_SUITE</fullName>
                    <label>Appointment Suite User License</label>
                </value>
                <value>
                    <fullName>PLATFORM_CEP</fullName>
                    <label>CEP Enterprise User License</label>
                </value>
                <value>
                    <fullName>COMMUNITY_APPOINTMENT_SUITE</fullName>
                    <label>Community Appointment Suite User License</label>
                </value>
                <value>
                    <fullName>EVENT_SUITE</fullName>
                    <label>Event &amp; Course Suite User License</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>License Types</relationshipLabel>
        <relationshipName>LicenseTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SUMO License</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>License #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUMO Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>